# maestro

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  proctor-a-phase2.yaml  proctor-a-scheduler.yaml  pyproject.toml  v010-prep.yaml
.github/workflows/: ci.yml  governance.yml
_cowork_output/: .gitignore  01-architecture-map.md  02-dag-scheduler-analysis.md  03-agent-integration.md  04-code-quality-ops.md  05-architecture-improvements.md  06-roadmap.md  07-competitive-analysis.md  08-tasks.md
_cowork_output/benchmark-contract/: README.md
contracts/benchmark/: README.md  report_benchmark-v1.schema.json
contracts/observability/: evidence-ref.md  evidence-ref.schema.json  log-schema.json  propagation.md  rationale.md
contracts/observability/fixtures/: error-chain.jsonl  nested-span.jsonl  redacted.jsonl  root-span.jsonl
contracts/work-correlation/: rationale.md  schema.json
contracts/work-correlation/fixtures/: arbiter-outcome.json  maestro-task.json  spec-task-bridge.json  with-evidence.json  workstream-awaiting-merge.json
docs/: debugging.md  idea-workstream-framework.md
docs/bugs/: 2026-07-05-validate-dangling-depends-on.md
docs/superpowers/plans/: 2026-05-23-r06b-m4-arbiter-wiring.md  2026-07-01-d2-d1-gate-and-model-passthrough.md  2026-07-02-catalog-driven-model-defaults.md  2026-07-04-init-validate.md  2026-07-05-cost-from-log.md  2026-07-05-models-cli.md  2026-07-05-opencode-wiring.md  2026-07-06-benchmark-cli.md  2026-07-06-c4-decomposer-delegation.md  2026-07-06-preflight-dangling-dep.md  2026-07-07-base-merge-before-done.md  2026-07-07-claude-cost-from-log.md  2026-07-07-decomposing-generation-pid-liveness.md  2026-07-07-observability-m3.md  2026-07-07-orchestrator-startup-recovery.md  2026-07-07-spawn-persist-window-closure.md  2026-07-08-labs-90-example-smoke.md  2026-07-13-gates-v1.2-h6-h7.md  2026-07-13-gates-v1.3-h9.md  2026-07-17-specrunnerconfig-passthrough.md  2026-07-19-m3-obs-traceparent-mcp.md  2026-07-19-stdlib-obs-bridge.md  2026-07-21-distributed-execution-phase-0.md  2026-07-22-maestro-scope-gate.md  2026-07-23-docker-isolation-phase1.md  2026-07-23-maestro-costs-cli.md  2026-07-23-maestro-transition-hooks.md  2026-07-24-ssh-backend-phase2a.md
docs/superpowers/specs/: 2026-05-23-r06b-m4-arbiter-wiring-design.md  2026-07-01-d2-d1-gate-and-model-passthrough-design.md  2026-07-02-catalog-driven-model-defaults-design.md  2026-07-04-init-validate-design.md  2026-07-05-cost-from-log-design.md  2026-07-05-models-cli-design.md  2026-07-05-opencode-wiring-design.md  2026-07-06-benchmark-cli-design.md  2026-07-06-c4-decomposer-delegation-design.md  2026-07-06-preflight-dangling-dep-design.md  2026-07-07-base-merge-before-done-design.md  2026-07-07-claude-cost-from-log-design.md  2026-07-07-decomposing-generation-pid-liveness-design.md  2026-07-07-observability-m3-runtime-decision-design.md  (+11 more)
examples/: dogfood-maestro.yaml  maestro-builds-maestro.yaml  observed-models.json  project.yaml  with-docker.yaml  with-ssh.yaml
maestro/: catalog.py  catalog_cli.py  catalog_discovery.py  changed_paths.py  cli.py  correlation.py  cost_tracker.py  dag.py  database.py  decomposer.py  event_log.py  gate_approvals.py  gates.py  logging_bridge.py  models.py  orchestrator.py  pr_manager.py  preflight.py  recovery.py  scaffold.py  scheduler.py  scope_gate.py  spec_runner.py  transitions.py  workspace.py
maestro/_vendor/: obs.py
maestro/benchmark/: __init__.py  arbiter_report.py  atp_client.py  models.py  runner.py  spawner_responder.py
maestro/coordination/: arbiter_client.py  arbiter_errors.py  rest_api.py  routing.py
maestro/execution/: __init__.py  backend.py  docker_cli.py  docker_handle.py  docker_recovery.py  env.py  exec_config.py  finalize.py  isolators.py  local.py  models.py  resolver.py  secret_file.py  ssh_backend.py  ssh_cli.py  ssh_collect.py  ssh_handle.py  ssh_launch.py  ssh_mirror.py  ssh_recovery.py
maestro/notifications/: base.py
maestro/resources/: __init__.py  agents-catalog-template.toml
maestro/schemas/: orchestrator_config.json  project_config.json
maestro/spawners/: __init__.py  aider.py  announce.py  base.py  claude_code.py  codex.py  opencode.py
scripts/: smoke_benchmark_report.py
tests/: conftest.py  test_arbiter_client.py  test_arbiter_client_structure.py  test_arbiter_client_traceparent.py  test_arbiter_client_version.py  test_arbiter_errors.py  test_arbiter_real_subprocess.py  test_arbiter_real_subprocess_benchmark.py  test_arbiter_routing.py  test_backend_resolver.py  test_backend_resolver_registry.py  test_benchmark_arbiter_report.py  test_benchmark_atp_client.py  test_benchmark_contract.py  test_benchmark_models.py  test_benchmark_runner.py  test_catalog.py  test_catalog_cli.py  test_catalog_discovery.py  test_changed_paths.py  test_cli.py  test_cli_benchmark.py  test_cli_check_scope.py  test_cli_costs.py  test_config.py  test_correlation_contract.py  test_cost_readonly.py  test_cost_summary.py  test_cost_tracker.py  test_dag.py  test_database.py  test_db_migration_ssh_handles.py  test_decomposer.py  test_docker_cli.py  test_docker_handle.py  test_docker_integration.py  test_docker_recovery.py  test_event_log.py  test_examples_smoke.py  test_examples_valid.py  (+52 more)
tests/e2e/: __init__.py  test_ssh_localhost_e2e.py
tests/fakes/: fake_execution_backend.py
tests/fixtures/: agents-catalog-ambiguous.toml  agents-catalog-malformed.toml  agents-catalog.toml  opencode_run.jsonl
(+4 files in other folders)
